Fix some more rtl layout issues

--- a/packages/components/src/index.css
+++ b/packages/components/src/index.css
@@ -63,8 +63,6 @@ body {
     background-color: hsla(var(--background));
     font-size: var(--font-base);
     font-weight: 400;
-    scrollbar-gutter: stable;
-    width: 100%;
 
     transition: filter 300ms ease;
     font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
